fixing image covering all

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -112,7 +112,7 @@
 .header-background .img {
   background-image: url("../img/header_large.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
+  //background-size: cover;
   background-position: center center;
   height: 15em;
   margin-bottom: 2em;
